Plugin downloads a different Escalante version, if needed #13
* This can be a workaround if there's an issue with Escalante and a
newer snapshot version fixes it.
* A test has been added that verifies that Escalante runs with a
different version than the current one.
* Escalante has been updated to latest 0.3.0-SNAPSHOT.