@@ -8,7 +8,7 @@ name := "sbt-escalante"
 
 organization := "io.escalante.sbt"
 
-version := "0.1.2-SNAPSHOT"
+version := "0.2.0-SNAPSHOT"
 
 resolvers += "JBoss repository" at "http://repository.jboss.org/nexus/content/groups/public/"
 
@@ -17,9 +17,8 @@ resolvers += "Project Odd repository" at "http://repository-projectodd.forge.clo
 libraryDependencies ++= Seq(
 	"org.jboss.shrinkwrap" % "shrinkwrap-api" % "1.0.1",
 	"org.jboss.shrinkwrap" % "shrinkwrap-impl-base" % "1.0.1",
-	"org.jboss.shrinkwrap.descriptors" % "shrinkwrap-descriptors-spi" % "2.0.0-alpha-3", // TODO: Remove explicit shrinkwrap-descriptors-spi dependency when sbt/sbt#647 resolved. 
-   "io.escalante" % "escalante-dist" % "0.2.0" artifacts(Artifact("escalante-dist", "zip", "zip")),
-   "org.jboss.as" % "jboss-as-arquillian-container-embedded" % "7.x.incremental.546",
+   "io.escalante" % "escalante-dist" % "0.3.0-SNAPSHOT" artifacts(Artifact("escalante-dist", "zip", "zip")),
+   "org.jboss.as" % "jboss-as-arquillian-container-embedded" % "7.x.incremental.667",
    "org.jboss.arquillian.core" % "arquillian-core-api" % "1.0.0.Final",
    "org.jboss.arquillian.core" % "arquillian-core-spi" % "1.0.0.Final",
    "org.jboss.arquillian.core" % "arquillian-core-impl-base" % "1.0.0.Final",
@@ -36,6 +35,7 @@ scriptedBufferLog := false
 
 // Tests require more resources than those by default
 scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M")
+// scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Xrunjdwp:transport=dt_socket,address=7979,server=y,suspend=y")
 
 publishTo <<= version { (v: String) =>
   val nexus = "https://repository.jboss.org/nexus/"
